<resources>
    <string name="app_name">ICARDA</string>
    <string name="notifyTitle">Notification</string>
    <string name="gpsNotifyMsg">Gps Check</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="Search">Search</string>
    <string name="title_activity_atlas_app">AtlasApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ICARDA</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="exit">Exit</string>
    <string name="Settings">Settings</string>
    <string name="ManageReadings">Manage Readings</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="CropType">Crop Type</string>
    <string name="SoilType">Soil Type</string>
    <string name="Sitename">Site Name</string>
    <string name="SoilOrWater">Soil or Water</string>
    <string name="AdjustedIrregation">Adjusted Irregation</string>
    <string name="siteAddress">Address</string>
    <string name="Type">Type</string>
    <string name="Ph_Soil">PH (Soil)</string>
    <string name="Ph_water">Ph (Water)</string>
    <string name="EC_Soil">EC (Soil)</string>
    <string name="EC_water">EC (Water)</string>
    <string name="LF">LF</string>
    <string name="CEC">CEC</string>
    <string name="I_Adjusted">I Adjusted Irregation</string>


</resources>